Meta-tabs visibility fix
The meta tabs that are shown in the playlist view will now no longer
scroll out of view when scrolling the playlist. To this end some minor
changes were made to their css and the ScrollToIndex JavaScript function
(which needed the offset value changed to account for the CSS change).
Additionally, in single.php some <? tags were replaced by <?php in order
to get Kohana to actually find the PHP code valid.

--- a/assets/css/base-admin.css
+++ b/assets/css/base-admin.css
@@ -15,6 +15,12 @@ body {
 	height: 100%; 
 	background: #E9E9E9 url(../img/body-bg.png) repeat 0 0; 
 	font: 13px/1.7em 'Open Sans';
+	
+	/* Always show a vertical scrollbar. This gets rid of the ugly 'shifting'
+	of the entire page when a user goes from a page that doesn't need a scroll-bar
+	to one that does. */
+	overflow: -moz-scrollbars-vertical;
+    overflow: scroll;
 }
 p { 	font: 13px/1.7em 'Open Sans'; }
 
