--- a/assets/css/pages/playlists.single.css
+++ b/assets/css/pages/playlists.single.css
@@ -9,9 +9,9 @@
 #fusic-player { width: 360px; }
 #fusic-controls { width: 360px; }
 
-#information-box { width:100%; margin-top:-2px; margin-left:0px; min-height:28px; margin-bottom:25px; }
+#information-box { width:100%; margin-top:37px; margin-left:0px; min-height:28px; margin-bottom:25px; }
 #meta-information-box { width:100%;}
-#meta-tabs { margin-bottom: 0px;}
+#meta-tabs { margin-bottom: 0px; position: fixed; background: #E9E9E9 url(../../img/body-bg.png) repeat 0 0; width: inherit; padding-right: 20px; padding-top: 22px; margin-top: -22px; z-index: 100; box-shadow: 0px 11px 31px -21px black; }
 .meta-tab a { color:black; }
 
 .user-box { margin-bottom:0px; padding-top:0px; height: 110px; }
